--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "autoprefixer": "^10.4.14",
     "class-variance-authority": "^0.5.1",
     "postcss-cli": "^10.1.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "source-map-loader": "^4.0.1"
   }
 }
